Fix overflow on small screens

--- a/src/theme.css
+++ b/src/theme.css
@@ -21,7 +21,8 @@
 	position: fixed;
 	right: -100vw;
 	bottom: 100px;
-	width: 370px;
+	max-width: 370px;
+	width: calc(100% - 40px);
 	min-height: 250px;
 	max-height: 500px;
 	height: calc(100% - 120px);
